[package]
name = "gustasum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
rayon = "1.7"
clap = { version = "4.2", features = ["derive"] }
sha2 = "0.10"
indicatif = "0.17"
atty = "0.2"
